--- a/index.html
+++ b/index.html
@@ -5,17 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <nav id="navbar">
         <div class="container">
         <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="./About.html">About</a></li>
+            <li><a href="./Projects.html">Projects</a></li>
+            <li><a href="./Contact.html">Contact</a></li>
         </ul>
         </div>
     </nav>
+<section id="description">
+<div class="about-img"></div>
+<div class="info-content">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus soluta sit blanditiis modi aperiam distinctio debitis velit autem molestias ullam tempore exercitationem ad harum, dicta vel dolore, porro eius mollitia veritatis ab. Nam, accusamus consequuntur ipsam vitae magni esse blanditiis laborum fugit voluptatibus ipsa dolores delectus laboriosam? Minus, illo reiciendis?</p>
+</div>
+</section>
+
+    <footer id="main-footer">
+                <p>Rigoberto Contreras &copy 2019 All rights reserved</p>
+    </footer>
+
+
 </body>
 </html>
